--- a/css/level.css
+++ b/css/level.css
@@ -6,10 +6,31 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
     background-color: #cbe5ff;
+    color: black;
+    text-align: center;
   }
 
 img {
   max-width: 100%;
+}
+
+.header { 
+
+}
+
+.sidebar { 
+  grid-area: menu;
+  background-color: #cbe5ff;
+}
+
+.siderbar img {
+  width:100%;
+  height: auto%;
+}
+
+.mainbody { 
+  grid-area: main; 
+  background-color: #cbe5ff;
 }
 
 .header { 
@@ -21,26 +42,15 @@ img {
   font-family: 'Roboto';
 }
 
-.sidebar { 
-  grid-area: menu;
-  background-color: #cbe5ff;
-  }
-
-.body { 
-  grid-area: main; 
-  background-color: #cbe5ff;
-}
-
 .grid-container {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-auto-rows: minmax(100px, auto);
   grid-template-areas:
-    'header header header header header header'
+    'menu header header header header header'
     'menu main main main main main';
   grid-gap: 0px;
   padding: 0px; 
-  background-color: #cbe5ff;
 }
 
 .grid-container > div {
@@ -50,10 +60,16 @@ img {
   font-size: 20px;
 }
 
-.sidebar h2 {
-  font-size: 20px;
-  font-family: 'Roboto';
-}
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+.row {
+    display: flex;
+    align-items: center;
+  }
 
 .sidebar a {
   font-size: 25px;
@@ -80,7 +96,14 @@ img {
   max-width: 100%;
 }
 
-.input_area {
+.quote {
+    background-color: #fff494;
+    font-size: 1.5rem;
+    margin: 10px;
+    padding: 25px;
+  }
+
+.input-area {
     background-color: #fff494;
     width: 40%;
     height: 80px;
@@ -91,13 +114,48 @@ img {
     border: 0px;
 }
 
-.restart_btn {
-    display: none;
-    background-color: #2a77c3;
-    font-size: 1.5rem;
-    padding: 10px;
-    border: 0px;
-  }
+.nextlvlbtn {
+  display: none;
+  color: #685500;
+  border-radius: 5%;
+  background-color: #ffffff;
+  font-size: 1.5rem;
+  padding: 10px;
+  border: 0px;
+}
+
+.timer, .errors, .accuracy, .wpm , .level{
+  background-color: #fff494;
+  height: 100px;
+  width: 100px;
+  margin: 8px;
+  padding: 12px;
+  border-radius: 10%;
+}
+
+.cur-time, .cur-errors,
+.cur-accuracy, .cur-wpm, .cur-level{
+  font-size: 2.75rem;
+}
+ 
+.wpm  {
+  display: none;
+}
+ 
+.header-text {
+  text-transform: uppercase;
+  font-size: 0.6rem;
+  font-weight: 600;
+}
+ 
+.incorrect-char {
+  color: red;
+  text-decoration: underline;
+}
+ 
+.correct-char {
+  color: darkgreen;
+}
 
 @media screen and (max-width: 700px) {
   .row {
